@@ -11,14 +11,20 @@
   of sampling units.
 }
 \usage{
-anosim(dis, grouping, permutations=999, strata)
+anosim(dat, grouping, permutations = 999, distance = "bray", strata)
 }
 
 \arguments{
-  \item{dis}{Dissimilarity matrix.}
+  \item{dat}{Data matrix or data frame in which rows are samples and
+    columns are response variable(s), or a dissimilarity object or a
+    symmetric square matrix of dissimilarities.}
   \item{grouping}{Factor for grouping observations.}
   \item{permutations}{Number of permutation to assess the significance
     of the ANOSIM statistic. }
+  \item{distance}{Choice of distance metric that measures the
+    dissimilarity between two observations . See \code{\link{vegdist}} for
+    options.  This will be used if \code{dat} was not a dissimilarity
+    structure or a symmetric square matrix.}  
   \item{strata}{An integer vector or factor specifying the strata for
     permutation. If supplied, observations are permuted only within the
     specified strata.}
